--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -14,7 +14,6 @@ body {
             align-items: center; 
             overflow: hidden;
             margin-top: 80px;
-            width: 800px;
             margin: 0 auto;
             border-radius: 100px;
             height: 40px;
@@ -200,3 +199,6 @@ ul{
             color: black;
             border-radius: 50px;
         }
+#navbar{
+    width: 800px;
+}
