--- a/Styles/mapsnav.css
+++ b/Styles/mapsnav.css
@@ -1,27 +1,4 @@
-        .navbar {
-            background-color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center; 
-            overflow: hidden;
-            margin-top: 80px;
-            margin: 0 auto;
-            border-radius: 100px;
-            height: 40px;
-        }
-        .navbar a {
-            float: left;
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 20px;
-            text-decoration: none;
-        }
-        .navbar a:hover {
-            background-color: #ddd;
-            color: black;
-            border-radius: 50px;
-        }
+
                 body {
             margin: 0;
             padding: 0;
@@ -67,6 +44,9 @@
 }
 #navbar1 {
     width: 650px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 #navbar2 {
     width: 800px;
